Bug 472674 - Add type parameters to org.eclipse.core.databinding
* Add type parameters to core databinding classes: DataBindingContext,
  IConverter, IValidator etc.
* Widen the type of some org.eclipse.core.databinding.observable
  methods. This makes possible to use ListDiffVisior<E> on a
  ListDiff<? extends E> to enable calls to those methods from
  obserable value listeners.
* Update tests and examples related to the plugin with type arguments.

Change-Id: I6ea2644d0a2395a16a29d554587d8ccd9de3b9a9
Signed-off-by: Jens Lidestrom <jens.lidestrom@rt-labs.com>